namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-immigration-detention-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-immigration-detention-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "calculate_release_dates_public_channel"
    cloud-platform.justice.gov.uk/application: "Immigration Detention"
    cloud-platform.justice.gov.uk/owner: "Calculate Release Dates (T05): team.chiron@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-immigration-detention-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-calculate-release-dates-team-devs"
    cloud-platform.justice.gov.uk/review-after: ""
